# GuardianBot

./: .dockerignore  .editorconfig  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: commands.rs  guild_settings.rs  main.rs  markdown_parser.rs  member_details.rs  message_handler.rs  message_utils.rs
